# VerifyChat

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
analysis_script/: analyze.py  fetch_data.py
backend/: Dockerfile  config.py  database.py  gemini.py  main.py  models.py
backend/pipeline/: checkworthiness.py  decomposer.py  evidence_retriever.py  hallucination_injector.py  orchestrator.py  query_generator.py  verifier.py
backend/routers/: admin.py  chat.py  guess.py  logs.py  predict.py  reveal.py  session_mode.py  sessions.py  standard_chat.py  verify.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: ChatInput.jsx  ChatMessage.jsx  ChatPanel.jsx  ClaimCard.jsx  GuessInput.jsx  PredictStep.jsx  RevealStep.jsx  SessionBar.jsx  StandardChatPanel.jsx  VerificationPanel.jsx
frontend/src/hooks/: useChat.js  useEventLogger.js  useStandardChat.js  useVerification.js
frontend/src/services/: api.js
